--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-spring-boot-starter</artifactId>
-			<version>${camel.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring-ws-starter</artifactId>
 			<version>${camel.version}</version>
@@ -42,6 +31,26 @@
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jaxb</artifactId>
 			<version>${camel.version}</version>
+		</dependency>
+
+
+		<!-- axiom :: https://ws.apache.org/axiom/ -->
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-api</artifactId>
+			<version>1.2.22</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-impl</artifactId>
+			<version>1.2.22</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ws.commons.axiom</groupId>
+			<artifactId>axiom-dom</artifactId>
+			<version>1.2.22</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- Testing -->
@@ -71,9 +80,9 @@
 				</executions>
 				<configuration>
 					<generatePackage>${project.groupId}.model</generatePackage>
-					<schemaDirectory>${project.basedir}/src/main/resources/wsdl</schemaDirectory>
+					<schemaDirectory>${project.basedir}/src/main/resources</schemaDirectory>
 					<schemaIncludes>
-						<include>calculator.wsdl</include>
+						<include>countries.wsdl</include>
 					</schemaIncludes>
 				</configuration>
 			</plugin>
